--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue_demo",
   "version": "1.0.0",
-  "description": "A Vue.js project 2019",
+  "description": "A Vue.js project 2019-01-02",
   "author": "",
   "private": true,
   "scripts": {
